# learn-python

./: .gitignore  README.md  pyproject.toml  test1.py  test2.py
python/armstrong-numbers/: armstrong_numbers.py
python/bob/: bob.py
python/collatz-conjecture/: collatz_conjecture.py
python/currency-exchange/: exchange.py
python/difference-of-squares/: difference_of_squares.py
python/diffie-hellman/: diffie_hellman.py
python/ghost-gobble-arcade-game/: arcade_game.py
python/grains/: grains.py
python/meltdown-mitigation/: conditionals.py
python/pig-latin/: pig_latin.py
python/raindrops/: raindrops.py
python/triangle/: triangle.py
python/yacht/: .README.md.swp  .yacht.py.swp  .yacht_test.py.swp  yacht.py
